...
                                                                    deleteEntry(entry: entry)
                                                                } label: {
                                                                    Label("Delete", systemImage: "trash")
                                                                }
                                                            }
            }
            .navigationTitle("Personal Journal")
            .navigationBarItems(trailing:
                                    Button(action: {
                showAddEntryView = true
            }) {
                Image(systemName: "plus")
            })
...
